--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -12,6 +12,7 @@
 
 .dashboard__recent {
     grid-column: 1 / -1;
+    grid-row: 1 / span 1;
 }
 
 .dashboard__recent__content {
@@ -27,6 +28,7 @@
 
 .dashboard__online {
     grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
     text-align: center;
 }
 .dashboard__online__content {
@@ -53,6 +55,7 @@
 
 .dashboard__total-updates {
     grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
 }
 .dashboard__total-updates__content {
     font-size: 1.5rem;
@@ -67,8 +70,18 @@
     font-style: normal;
 }
 
+.dashboard__newest-user {
+    grid-column: 1 / span 1;
+    grid-row: 4 / span 1;
+}
+.dashboard__newest-user__content {
+    text-align: center;
+    font-size: 1.75rem;
+}
+
 .dashboard__updates {
     grid-column: 2 / -1;
+    grid-row: 2 / span 2;
 }
 
 @media screen and (max-width: 590px) {
