--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -91,5 +91,18 @@
 
     .dashboard__updates {
         grid-column: 1 / span 1;
+        grid-row: 2 / span 1;
+    }
+
+    .dashboard__online {
+        grid-row: 3 / span 1;
+    }
+
+    .dashboard__total-updates {
+        grid-row: 4 / span 1;
+    }
+
+    .dashboard__newest-user {
+        grid-row: 5 / span 1;
     }
 }
