--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -15,6 +15,10 @@
     grid-row: 1 / span 1;
 }
 
+.dashboard__recent a {
+    text-align: center;
+}
+
 .dashboard__recent__content {
     display: flex;
     flex-wrap: wrap;
