WT-T-24 Setting up a link theme col + form

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -35,6 +35,13 @@
       <% end %>
     </div>
 
+    <% unless link.theme.nil? || link.theme.empty? %>
+      <div class="link--theme">
+        <ion-icon name="pricetag-outline"></ion-icon>
+        <%= link.theme %>
+      </div>
+    <% end %>
+
     <div class="link--blacklist">
       <strong>Blacklist:</strong>
       <%= '⚠️ No Blacklisted Tags' if link.blacklist == '' %>
