--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -16,14 +16,16 @@
 
   <div class="link--form--checkbox-row">
     <%= form.label :never_expires do %>
-      <ion-icon name="infinite"></ion-icon> Never expires
+      <ion-icon name="infinite"></ion-icon>
+      Never expires
     <% end %>
     <%= form.check_box :never_expires %>
   </div>
 
   <div class="link--form--checkbox-row">
     <%= form.label :friends_only do %>
-      <ion-icon name="document-lock"></ion-icon> Friends Only (No public access)
+      <ion-icon name="document-lock"></ion-icon>
+      Friends Only (No public access)
     <% end %>
     <%= form.check_box :friends_only %>
   </div>
@@ -36,6 +38,18 @@
   <div>
     <%= form.label :terms, style: "display: block" %>
     <%= form.text_area :terms, size: '70x5' %>
+  </div>
+
+  <div>
+    <%= form.label :theme, style: "display: block" do %>
+      <ion-icon name="pricetag-outline"></ion-icon>
+      Theme tag
+    <% end %>
+    <div>
+      <em>All wallpapers selected for this link must contain this tag. You can only use 1 theme tag. Leave it blank to
+        allow all posts that are not otherwise blacklisted.</em><br/>
+      <%= form.text_field :theme, placeholder: 'loimu_(character)' %>
+    </div>
   </div>
 
   <div>
