--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 
 <footer>
   <p>Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.</p>
-  <small>© joi.how 2022 / Build #{{--buildnumber--}}</small>
+  <small>© joi.how 2022 / Build #{{--buildnumber--}} by {{--buildagent--}}</small>
 </footer>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
