Added in some page titles, this should make multi tab nav easier

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,5 @@
 <% unless current_user.nil? %>
+  <% content_for(:html_title) { 'Walltaker Dashboard' } %>
   <div class="dashboard">
     <div class="dashboard__recent">
       <h2>Recent Backgrounds</h2>
