--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:html_title) { 'Your Walltaker Friends' } %>
+
 <div class="task-tools">
   <div class="left">
     <% if action_name == 'requests' %>
