--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:html_title) { "Edit Link #{@link.id}" } %>
+
 <div class="task-tools">
   <div class="left">
     <%= link_to "Back to link", @link %>
