--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:html_title) { "New Walltaker Link" } %>
+
 <div class="task-tools">
   <%= link_to "Back to links", links_path %>
 </div>
