--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:html_title) { "Your Walltaker Links" } %>
+
 <div class="task-tools">
   <div class="left">
     <%= link_to "Back to dashboard", root_path %>
