--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:html_title) { "Sign Up for Walltaker" } %>
 <h2><ion-icon name="person"></ion-icon> Sign Up</h2>
 
 <%= form_with model: @user do |f| %>
