--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,6 +31,8 @@
   </small>
 </h2>
 
+<%= render 'details', user: @user %>
+
 <%= render 'past_links', local: @past_links %>
 
 <% if @links.count.positive? %>
