Blargh, bug in turbo frames means I need to account for the user ending up on a frame page :(

--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -2,7 +2,7 @@
   <div class="details__container">
     <div class="task-tools">
       <div class="right">
-        <a href="<%= user_path(user.username) %>/edit" title="Edit my details" class="no-underline">
+        <a href="<%= user_path(user.username) %>/edit" title="Edit my details" class="no-underline" data-turbo-frame="_self">
           <ion-icon name="build"></ion-icon>
           Edit
         </a>
