Deleting background when response type is disgust

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -96,7 +96,7 @@
         <% elsif link.came? %>
           💦 this post made them cum!
         <% elsif link.disgust? %>
-          ☹️
+          🤢 this wallpaper was removed
         <% end %>
       </small>
     </div>
