--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%= content_for?(:html_title) ? yield(:html_title) : "Walltaker" %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
-  <meta name="rating" content="adult" />
+  <meta name="rating" content="adult"/>
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="/base.css?x={{--buildnumber--}}"/>
   <link rel="stylesheet" href="/link.css?x={{--buildnumber--}}"/>
@@ -64,8 +64,17 @@
 </main>
 
 <footer>
-  <p>Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.</p>
-  <small>© joi.how 2022 / Build #{{--buildnumber--}} by {{--buildagent--}}</small>
+  <p>
+    Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.
+  </p>
+  <small>
+    © joi.how 2022 / Build #{{--buildnumber--}} by {{--buildagent--}}
+    <% if current_user && current_user.admin %>
+      <%= link_to blazer_path do %>
+        <ion-icon name="stats-chart"></ion-icon> Stats
+      <% end %>
+    <% end %>
+  </small>
 </footer>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
