Added @Lycraon and @Deanskond 's clients!

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -114,6 +114,14 @@
     (Android 12+)
   </li>
   <li>
+    <a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine Client</a>
+    (<a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Enginer for Windows</a>)
+  </li>
+  <li>
+    <a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a>
+    (<a href="https://llamalab.com/automate/">Automate App for Android</a>)
+  </li>
+  <li>
     <a href="http://joi.how/" target="_blank">JOI.how</a> (Web-based)
   </li>
 </ul>
